// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LinkedList linkedList init & add 1`] = `
Array [
  "0:0x00",
  "1:0x00",
  "2:0x00",
  "3:0x00",
  "4:0x00",
  "5:0x00",
  "6:0x00",
  "7:0x00",
  "8:0x00",
  "9:0x00",
  "10:0x00",
  "11:0x00",
  "12:0x00",
  "13:0x00",
  "14:0x00",
  "15:0x00",
  "16:0x40",
  "17:0x00",
  "18:0x00",
  "19:0x00",
  "20:0x40",
  "21:0x00",
  "22:0x00",
  "23:0x00",
  "24:0x00",
  "25:0x00",
  "26:0x00",
  "27:0x00",
  "28:0x30",
  "29:0x00",
  "30:0x00",
  "31:0x00",
  "32:0x10",
  "33:0x00",
  "34:0x00",
  "35:0x00",
  "36:0x00",
  "37:0x00",
  "38:0x00",
  "39:0x00",
  "40:0x00",
  "41:0x00",
  "42:0x00",
  "43:0x38",
  "44:0x00",
  "45:0x00",
  "46:0x00",
  "47:0x38",
  "48:0x10",
  "49:0x00",
  "50:0x00",
  "51:0x00",
  "52:0x20",
  "53:0x00",
  "54:0x00",
  "55:0x00",
  "56:0x00",
  "57:0x00",
  "58:0x00",
  "59:0x00",
  "60:0x00",
  "61:0x00",
  "62:0x00",
  "63:0x00",
]
`;

exports[`LinkedList linkedList init & add 2`] = `
Array [
  "0:0x00",
  "1:0x00",
  "2:0x00",
  "3:0x00",
  "4:0x00",
  "5:0x00",
  "6:0x00",
  "7:0x00",
  "8:0x00",
  "9:0x00",
  "10:0x00",
  "11:0x00",
  "12:0x00",
  "13:0x00",
  "14:0x00",
  "15:0x00",
  "16:0x40",
  "17:0x00",
  "18:0x00",
  "19:0x00",
  "20:0x40",
  "21:0x00",
  "22:0x00",
  "23:0x00",
  "24:0x00",
  "25:0x00",
  "26:0x00",
  "27:0x00",
  "28:0x30",
  "29:0x00",
  "30:0x00",
  "31:0x00",
  "32:0x10",
  "33:0x00",
  "34:0x00",
  "35:0x00",
  "36:0x00",
  "37:0x00",
  "38:0x00",
  "39:0x00",
  "40:0x00",
  "41:0x00",
  "42:0x00",
  "43:0x00",
  "44:0x00",
  "45:0x00",
  "46:0x00",
  "47:0x38",
  "48:0x10",
  "49:0x00",
  "50:0x00",
  "51:0x00",
  "52:0x20",
  "53:0x00",
  "54:0x00",
  "55:0x00",
  "56:0x00",
  "57:0x00",
  "58:0x00",
  "59:0x00",
  "60:0x00",
  "61:0x00",
  "62:0x00",
  "63:0x07",
]
`;
